--- a/src/app/components/splash-screen/splash-screen.component.scss
+++ b/src/app/components/splash-screen/splash-screen.component.scss
@@ -14,53 +14,69 @@
             flex-shrink: 0;
         }
     }
-    .logo-div-2 {
+}
+.secondScreen {
+    text-align: right;
+    direction: rtl;
+
+    .logo-div {
         display: flex;
         height: 100%;
-        flex-direction: column;
-        align-items: flex-end;
+        justify-content: center;
+        align-items: center;
         .logo {
             width: 252px;
             height: 43px;
             flex-shrink: 0;
-            margin-top: 136px;
-            margin-left: 17px;
         }
-        .car {
-            width: 450px;
-            height: 460px;
-        }
-        .text {
-            padding-right: 16px;
-            padding-bottom: 21px;
-            padding-left: 72px;
-            margin-top: 40px;
+    }
+}
+.logo-div-2 {
+    display: flex;
+    height: 100%;
+    flex-direction: column;
+    align-items: flex-end;
+    .logo {
+        width: 252px;
+        height: 43px;
+        flex-shrink: 0;
+        margin-top: 136px;
+        margin-left: 17px;
+    }
+    .car {
+        width: 450px;
+        height: 460px;
+    }
+    .text {
+        padding-right: 16px;
+        padding-bottom: 21px;
+        padding-left: 72px;
+        margin-top: 40px;
+        color: #FFF;
+    }
+    .button-div {
+        display: flex;
+        padding-right: 16px;
+        justify-content: flex-start;
+        width: 100%;
+        .next-button {
+            margin-right: 16px;
+            padding-left: 48px;
+            padding-right: 48px;
+            padding-top: 6px;
+            padding-bottom: 6px;
+            cursor: pointer;
             color: #FFF;
-        }
-        .button-div {
             display: flex;
-            padding-right: 16px;
-            justify-content: flex-start;
-            width: 100%;
-            .next-button {
-                margin-right: 16px;
-                padding-left: 48px;
-                padding-right: 48px;
-                padding-top: 6px;
-                padding-bottom: 6px;
-                cursor: pointer;
-                color: #FFF;
-                display: flex;
-                direction: rtl;
-                background: #1E1D1D;
-                justify-content: center;
-                gap: 10px;
-                font-size: 14px;
-                border: none;
-                border-radius: 15px;
-                font-style: normal;
-                font-weight: 500;
-            }
+            direction: rtl;
+            background: #1E1D1D;
+            justify-content: center;
+            gap: 10px;
+            font-size: 14px;
+            border: none;
+            border-radius: 15px;
+            font-style: normal;
+            font-weight: 500;
         }
     }
 }
