--- a/src/app/components/splash-screen/splash-screen.component.scss
+++ b/src/app/components/splash-screen/splash-screen.component.scss
@@ -40,11 +40,11 @@
         width: 252px;
         height: 43px;
         flex-shrink: 0;
-        margin-top: 136px;
+        margin-top: 40px;
         margin-left: 17px;
     }
     .car {
-        width: 450px;
+        width: 360px;
         height: 460px;
     }
     .text {
@@ -56,8 +56,8 @@
     }
     .button-div {
         display: flex;
-        padding-right: 16px;
         justify-content: flex-start;
+        margin-bottom: 50px;
         width: 100%;
         .next-button {
             margin-right: 16px;
