--- a/src/app/components/icons-page/icons-page.component.html
+++ b/src/app/components/icons-page/icons-page.component.html
@@ -1,16 +1,18 @@
 
-<div class="div-1">
-    <span>לחץ על הנורה שנדלקה לך כדי לקבל יותר פרטים על משמעותה</span>
-</div>
-<div class="arrow-div">
-    <img class="arrow" (click)="Back()" src="/assets/nuricar/left_arrow.png"/>
-    <app-breadcums></app-breadcums>
-  </div>
-<div class="envelopIconPage" *ngIf="iconService && iconService.imagesPathArray">
-    <div class="icon-div" *ngFor="let icon of iconService.imagesPathArray" (click)="IconClicked(icon)">
-        <img class="icon" [src]="icon"/>
+<div class="envelop">
+    <div class="div-1">
+        <span>לחץ על הנורה שנדלקה לך כדי לקבל יותר פרטים על משמעותה</span>
     </div>
-</div>
-<div class="missing">
-    <p>הנורה שחיפשתם לא נמצאת?<span (click)="missingLight()">הקליקו כאן</span></p>
+    <div class="arrow-div">
+        <img class="arrow" (click)="Back()" src="/assets/nuricar/left_arrow.png"/>
+        <app-breadcums></app-breadcums>
+      </div>
+    <div class="envelopIconPage" *ngIf="iconService && iconService.imagesPathArray">
+        <div class="icon-div" *ngFor="let icon of iconService.imagesPathArray" (click)="IconClicked(icon)">
+            <img class="icon" [src]="icon"/>
+        </div>
+    </div>
+    <div class="missing">
+        <p>הנורה שחיפשתם לא נמצאת?<span (click)="missingLight()">הקליקו כאן</span></p>
+    </div>
 </div>
