--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,7 +16,7 @@ html, body {
 /* Importing Bootstrap SCSS file. */
 @import "~@ng-select/ng-select/themes/default.theme.css";
 
-html, body { height: 100%; }
+html, body { height: 100% !important; }
 body {
      margin: 0;
      font-family: Roboto !important;
