--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -1,9 +1,17 @@
 <div class="envelop">
     <div class="header" [ngClass]="{'end': step === 1 || step === 2 || step === 3}">
-      <img *ngIf="step === 0" src="/assets/nuricar/moving-car.png"/>
-      <img *ngIf="step === 1" src="/assets/nuricar/pos2.png"/>
-      <img *ngIf="step === 2" src="/assets/nuricar/pos3.png"/>
-      <img *ngIf="step === 3" src="/assets/nuricar/pos4.png"/>
+      @if (step === 0) {
+        <img src="/assets/nuricar/moving-car.png"/>
+      }
+      @if (step === 1) {
+        <img src="/assets/nuricar/pos2.png"/>
+      }
+      @if (step === 2) {
+        <img src="/assets/nuricar/pos3.png"/>
+      }
+      @if (step === 3) {
+        <img src="/assets/nuricar/pos4.png"/>
+      }
     </div>
 
     <div class="choose">
@@ -20,43 +28,57 @@
                   [searchable]="false"
                   [clearable]="false"
                   [multiple]="false">
-          <ng-option *ngFor="let car of carsnames; let i = index" [value]="car">
-            <div class="div-opt">
-              <img class="img" src='{{images[i]}}'>
-              <span style=" align-self: center;">{{car}}</span>              
-            </div>
-          </ng-option>
+          @for (car of carsnames; track $index) {
+            <ng-option [value]="car">
+              <div class="div-opt">
+                <img class="img" src='{{images[$index]}}'>
+                <span style=" align-self: center;">{{car}}</span>              
+              </div>
+            </ng-option>
+          }
       </ng-select>
       </div>
 
-      <div class="row-dp second-dp" *ngIf="iconService.manufacturerChoosen && iconService.selectedModelJson">
-        <label class="label">בחר מודל:</label>
-        <ng-select [(ngModel)]="iconService.selectedModel" 
-                  name="model"
-                  (change)="ModelChange($event)"
-                  [editableSearchTerm]="false"
-                  [searchable]="false"
-                  [clearable]="false"
-                  [multiple]="false">
-          <ng-option *ngFor="let model of iconService.selectedModelJson" [value]="model">{{model.modelName}}</ng-option>
-        </ng-select>
-      </div>
+      @if (iconService.manufacturerChoosen && iconService.selectedModelJson && iconService.selectedModelJson.length > 0) {
+        <div class="row-dp second-dp">
+          <label class="label">בחר מודל:</label>
+          <ng-select [(ngModel)]="iconService.selectedModel" 
+                    name="model"
+                    (change)="ModelChange($event)"
+                    [editableSearchTerm]="false"
+                    [searchable]="false"
+                    [clearable]="false"
+                    [multiple]="false"
+                    placeholder="בחר מודל">
+            @for (model of iconService.selectedModelJson; track model.englishModelName || model.modelName) {
+              <ng-option [value]="model">{{model.modelName}}</ng-option>
+            }
+          </ng-select>
+        </div>
+      }
 
-      <div class="row-dp second-dp" *ngIf="iconService.modelChoosen">
-        <label class="label">בחר שנה:</label>
-        <ng-select [(ngModel)]="iconService.selectedYear" 
-                  name="year"
-                  (change)="YearChange($event)"
-                  [editableSearchTerm]="false"
-                  [searchable]="false"
-                  [clearable]="false"
-                  [multiple]="false">
-          <ng-option *ngFor="let year of iconService?.selectedModel?.years" [value]="year">{{year | hybrid}}</ng-option>
-        </ng-select>
-      </div>
+      @if (iconService.modelChoosen && iconService.selectedModel && iconService.selectedModel.filteredYears && iconService.selectedModel.filteredYears.length > 0) {
+        <div class="row-dp second-dp">
+          <label class="label">בחר שנה:</label>
+          <ng-select [(ngModel)]="iconService.selectedYear" 
+                    name="year"
+                    (change)="YearChange($event)"
+                    [editableSearchTerm]="false"
+                    [searchable]="false"
+                    [clearable]="false"
+                    [multiple]="false"
+                    placeholder="בחר שנה">
+            @for (year of iconService.selectedModel.filteredYears; track year) {
+              <ng-option [value]="year">{{year | hybrid}}</ng-option>
+            }
+          </ng-select>
+        </div>
+      }
 
-      <div class="but-div" *ngIf="iconService.buttonClicked" (click)="SearchCar()">
-        <button>חפש!</button>
-      </div>
+      @if (iconService.buttonClicked) {
+        <div class="but-div" (click)="SearchCar()">
+          <button>חפש!</button>
+        </div>
+      }
   </div>
 </div>
