--- a/src/app/components/splash-screen/splash-screen.component.scss
+++ b/src/app/components/splash-screen/splash-screen.component.scss
@@ -18,7 +18,7 @@
 .secondScreen {
     text-align: right;
     direction: rtl;
-
+    height: 100%;
     .logo-div {
         display: flex;
         height: 100%;
