--- a/src/app/components/main-page/main-page.component.scss
+++ b/src/app/components/main-page/main-page.component.scss
@@ -125,8 +125,8 @@
     }
     .ng-option {
         color: #FFF !important;
-        width: 303px;
         height: 34px;
+        width: 100%;
     }
     .ng-option:nth-child(odd) {
         background-color: #101010 !important;
