--- a/src/app/components/policy/policy.component.scss
+++ b/src/app/components/policy/policy.component.scss
@@ -1,17 +1,24 @@
-.arrow-div {
-    width: 100%;
-    text-align: left;
-    margin-bottom: 15px;
-    display: flex;
-    justify-content: flex-start;
-    margin-bottom: 50px;
-    margin-top: 35px;
-    app-breadcums {
+.envelop {
+    background: #1E1D1D;
+    height: 100%;
+    color: white;
+    padding: 20px;
+    font-size: 20px;    
+    font-family: 'Assistant', sans-serif;
+    .arrow-div {
+        width: 100%;
+        text-align: left;
+        margin-bottom: 15px;
         display: flex;
-        align-items: center;
-    }
-    .arrow {
-        width: 45px;
-        height: 45px;
+        justify-content: flex-start;
+        margin-bottom: 50px;
+        app-breadcums {
+            display: flex;
+            align-items: center;
+        }
+        .arrow {
+            width: 45px;
+            height: 45px;
+        }
     }
 }
