--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -58,7 +58,7 @@
       }
 
       @if (iconService.modelChoosen && iconService.selectedModel && iconService.selectedModel.filteredYears && iconService.selectedModel.filteredYears.length > 0) {
-        <div class="row-dp second-dp">
+        <div class="row-dp second-dp third-dd">
           <label class="label">בחר שנה:</label>
           <ng-select [(ngModel)]="iconService.selectedYear" 
                     name="year"
