--- a/src/app/components/notifications/notifications.component.scss
+++ b/src/app/components/notifications/notifications.component.scss
@@ -1,3 +1,10 @@
+:host {
+    height: 100%;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
 .envelop{
     display: flex;
     direction: rtl;
