--- a/src/app/components/splash-screen/splash-screen.component.html
+++ b/src/app/components/splash-screen/splash-screen.component.html
@@ -8,7 +8,7 @@
     <div class="logo-div-2">
         <img class="logo" src="/assets/nuricar/logo-present-page.svg"/> 
         <img class="car" src="/assets/nuricar/car.png"/>
-        <p class="text">כל הנאמר באפליקציה זו בגדר המלצה בלבד!  אין לאחז בזה חשיבות, יש להתייעץ עם גורם מוסמך או מומחה .</p>
+        <p class="text">התכנים המוצגים באפליקציה ניתנים כשירות לציבור ואינם מהווים ייעוץ מקצועי, המלצה או התחייבות מכל סוג. לפני קבלת החלטה או ביצוע פעולה כלשהי, מומלץ להיוועץ בגורם מוסמך או מומחה בתחום הרלוונטי. מפתחי האפליקציה אינם נושאים באחריות לכל נזק או הפסד שייגרם כתוצאה מהסתמכות על המידע המופיע בה.</p>
         <div class="button-div">
             <button (click)="GoToMainPage()" class="next-button"><span>
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="17" viewBox="0 0 16 17" fill="none">
