--- a/src/app/components/help/help.component.scss
+++ b/src/app/components/help/help.component.scss
@@ -1,3 +1,10 @@
+:host {
+    height: 100%;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
 .arrow-div {
     width: 100%;
     text-align: left;
