--- a/src/app/components/icons-page/icons-page.component.html
+++ b/src/app/components/icons-page/icons-page.component.html
@@ -4,7 +4,11 @@
         <span>לחץ על הנורה שנדלקה לך כדי לקבל יותר פרטים על משמעותה</span>
     </div>
     <div class="arrow-div">
-        <img class="arrow" (click)="Back()" src="/assets/nuricar/left_arrow.png"/>
+        <div class="arrow" (click)="Back()">
+            <svg width="24" height="24" color="aqua" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M15 18L9 12L15 6" stroke="aqua" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+        </div>
         <app-breadcums></app-breadcums>
       </div>
     <div class="envelopIconPage" *ngIf="iconService && iconService.imagesPathArray">
