--- a/src/app/components/main-page/main-page.component.scss
+++ b/src/app/components/main-page/main-page.component.scss
@@ -5,6 +5,7 @@
     align-items: center;
     padding: 1rem;
     text-align: right;
+    flex: 1;
 
     .title-div {
         margin-bottom: 1rem;
@@ -54,6 +55,8 @@
         display: flex;
         justify-content: center;
         button {
+            font-size: 25px;
+            font-weight: 600;
             border-radius: 15px;
             background: #00E5F5;
             width: 303px;
@@ -61,7 +64,6 @@
             justify-content: center;
             align-items: center;
             gap: 10px;
-            font-weight: 500;
             color: white;
         }
         button:hover {
@@ -121,6 +123,9 @@
         .ng-value {
             position: relative;
             top: 2px;
+            .ng-value-label {
+                font-weight: 400 !important;
+            }
         }
     }
     .ng-option {
@@ -146,13 +151,29 @@
     .ng-select.ng-select-opened>.ng-select-container {
         background-color: #000 !important;
     }
+    .ng-dropdown-panel {
+        border-radius: 5px;
+        background-color: #3F3F3F !important;
+        .ng-dropdown-panel-items {
+            border-radius: 5px;
+            background-color: #3F3F3F !important;
+        }
+    }
+}
+
+:host {
+    display: block;
+    min-height: 100vh;
+    background: var(--Bg-Color, #1E1D1D);
 }
 
 .envelop {
-    height: 100%;
-    background: var(--Bg-Color, #1E1D1D);
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
     .header {
         display: flex;
+        flex-shrink: 0;
     }
     .choose {
         display: flex;
@@ -163,6 +184,7 @@
         font-weight: 500;
         color: white;
         line-height: normal;
+        flex-shrink: 0;
     }
 }
 .end {
@@ -172,4 +194,5 @@
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
+    padding-bottom: 7px;
 }
