--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 
 html, body { 
-    margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;
-    height: 100%;
+    margin: 0; 
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+    min-height: 100vh;
     width: 100%;
 }
 
@@ -16,22 +17,24 @@ html, body {
 /* Importing Bootstrap SCSS file. */
 @import "~@ng-select/ng-select/themes/default.theme.css";
 
-html, body { height: 100% !important; }
+html, body { min-height: 100vh !important; }
 body {
      margin: 0;
      font-family: Roboto !important;
      font: unset !important;
      letter-spacing: unset !important;
  }
-app-splash-screen, app-main-page, app-icons-page, app-focused-icon {
-        height: 100%;
+app-splash-screen, app-main-page, app-icons-page, app-focused-icon, 
+app-contact, app-help, app-tips, app-notifications, app-sos, app-missing-lights, app-policy {
+        min-height: 100vh;
 }
 app-root {
-    height: 100%;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
-    app-splash-screen, app-main-page, app-icons-page, app-focused-icon {
-        height: 100%;
+    app-splash-screen, app-main-page, app-icons-page, app-focused-icon,
+    app-contact, app-help, app-tips, app-notifications, app-sos, app-missing-lights, app-policy {
+        min-height: 100vh;
     }
 }
 .cdk-overlay-pane.missing-box {
